1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amadmin.c: fix minor message format problem.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amlabel.c: insist on being run as the dump user (ala
	amflush) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amrmtape.sh.in: insist on being run as the dump user (ala
	amdump) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amadmin.c: issue a warning for update commands that might
	leave ownership incorrect.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c: add a "-t" option to disable tape tests in the
	server checks.  This lets server checks be done without mounting a
	tape.  Add lots more sanity checks, in particular, ownership and
	permissions of the index area and text format database.  Warn if
	amcheck is not run as the dump user listed in amanda.conf.  Minor
	consistency cleanup in the messages.
	* man/amcheck.8.in: document the changes.

1998-11-24  Mike Grupenhoff <kashmir@munge.com>

	* common-src/dgram.c (dgram_bind): always try to get a reserved
	port, even if KRB4_SECURITY is defined

1998-11-23  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (struct bsd_handle): change 'int handle'
	to 'char proto_handle[32]' because the remote client might generate
	handles that aren't completely numerical
	* common-src/bsd-security.c (gethandle, str2pkthdr): the 'handle' arg
	is now a string
	* common-src/bsd-security.c (bsd_connect): convert our generated
	handle into a string to pass to gethandle()
	* common-src/bsd-security.c (str2pkthdr): rewrite to parse with
	strtok().  Parse the handle as a string instead of trying to
	convert it into a number

1998-11-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/amcleanup.sh.in (logdir/amdump): arrange that it is
	renamed if it exists, even if no log file could be found.
